@startuml TowerDefenceDomain

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor #FCE2BF
    BorderColor #4A4A4A
    ArrowColor #4A4A4A
}

title TowerDefence - Domain Model

package "Users & Economy" {
    class User {
        - id : int
        - username : String
        - password : String
        - email : String
        - saldo : double
        - permissions : String
        - level : int
    }

    class Item {
        - id : int
        - name : String
        - description : String
        - type : String
        - price : double
        - available : boolean
        - assetName : String
    }

    class Inventory {
        - userId : int
        - itemId : int
        - quantity : int
    }

    class Purchase {
        - id : int
        - userId : int
        - itemId : int
        - quantity : int
        - totalPrice : double
        - userSaldo : double
        - date : String
    }
}

package "Events" {
    class GameEvent {
        - id : int
        - name : String
        - description : String
        - image : String
        - startDate : String
        - endDate : String
    }

    class EventRegistration {
        - id : int
        - eventId : int
        - userId : int
        - username : String
        - date : String
    }
}

package "Teams" {
    class Team {
        - name : String
        - avatar : String
        - points : int
    }

    class TeamMember {
        - id : int
        - team : String
        - name : String
        - avatar : String
        - points : int
    }
}

package "Forum" {
    class ForumTopic {
        - id : int
        - title : String
        - description : String
        - author : String
        - createdAt : String
        - messageCount : int
    }

    class ForumMessage {
        - id : int
        - topicId : int
        - author : String
        - content : String
        - createdAt : String
    }
}

User "1" *-- "0..*" Inventory : owns
Inventory "0..*" --> "1" Item : item

User "1" *-- "0..*" Purchase : purchase history
Purchase "0..*" --> "1" Item : bought item

GameEvent "1" *-- "0..*" EventRegistration : registrations
User "1" --> "0..*" EventRegistration : registers

Team "1" *-- "0..*" TeamMember : members
User "1" --> "0..1" TeamMember : team profile

ForumTopic "1" *-- "0..*" ForumMessage : messages
User "1" --> "0..*" ForumTopic : creates
User "1" --> "0..*" ForumMessage : writes

legend right
  <b>Legend</b>
  *-- composition
  --> association
endlegend

@enduml
